5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1637_2711.log
== TEST (2019-04-09 11:29:47) 
-- CODE:
v = float(input("valor disponivel: "))
qt = int(input("quantidade de tickets do ru: "))
pt = float(input("valor do ticket: "))
vt = int(input("quantidade de vales transporte: "))
pv = float(input("preco do vale transporte: "))

gasto = v - qt*pt - vt*pv
if (gasto <= 0):
	men = SUFICIENTE
else:
	men = INSUFICIENTE
	
print(men)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    men = INSUFICIENTE
NameError: name 'INSUFICIENTE' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:30:26) 
-- CODE:
v = float(input("valor disponivel: "))
qt = int(input("quantidade de tickets do ru: "))
pt = float(input("valor do ticket: "))
vt = int(input("quantidade de vales transporte: "))
pv = float(input("preco do vale transporte: "))

gasto = v - qt*pt - vt*pv
if (gasto <= 0):
	men = "SUFICIENTE"
else:
	men = "INSUFICIENTE"
	
print(men)	
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:31:31) 
-- CODE:
v = float(input("valor disponivel: "))
qt = int(input("quantidade de tickets do ru: "))
pt = float(input("valor do ticket: "))
vt = int(input("quantidade de vales transporte: "))
pv = float(input("preco do vale transporte: "))

gasto = v - qt*pt - vt*pv
if (gasto >= 0):
	men = "SUFICIENTE"
else:
	men = "INSUFICIENTE"
	
print(men)	
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:31:33) 
-- CODE:
v = float(input("valor disponivel: "))
qt = int(input("quantidade de tickets do ru: "))
pt = float(input("valor do ticket: "))
vt = int(input("quantidade de vales transporte: "))
pv = float(input("preco do vale transporte: "))

gasto = v - qt*pt - vt*pv
if (gasto >= 0):
	men = "SUFICIENTE"
else:
	men = "INSUFICIENTE"
	
print(men)	
-- EXECUTION TIME:
0.140521
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
